<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textStyle="bold"
            tools:text="email@email.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/action_sign_in"
        tools:enabled="false" />

    <TextView
        android:id="@+id/alternative_enter_label"
        style="@style/regularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/login_alternative_enter_label" />

    <!---TODO: изменить нарезку файлов  или поменять на вектор -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_string"
            android:src="@android:drawable/ic_menu_camera"
            android:text="@string/empty_string" />

        <ImageView
            android:id="@+id/ic2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_string"
            android:src="@android:drawable/ic_menu_camera"
            android:text="@string/empty_string" />

        <ImageView
            android:id="@+id/ic3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_string"
            android:src="@android:drawable/ic_menu_camera"
            android:text="@string/empty_string" />

        <ImageView
            android:id="@+id/ic4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_string"
            android:src="@android:drawable/ic_menu_camera"
            android:text="@string/empty_string" />

    </LinearLayout>


    <TextView
        android:id="@+id/enter_label"
        style="@style/inactiveText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center|bottom"
        android:text="@string/login_enter_label" />

</LinearLayout>